// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue matches snapshot 1`] = `
<div id="game">
  <home-screen-stub></home-screen-stub>
  <!---->
</div>
`;

exports[`App.vue shows the game newgame is called 1`] = `
<div id="game">
  <!---->
  <game-screen-stub board="[object Object]"></game-screen-stub>
</div>
`;
